--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -392,6 +392,11 @@
     |
     <a href="" target="_blank">UIC</a>
     |
+<!-- data mining - B-->     
+    <a href="http://18.133.154.107/" target="_blank">ICDM</a>
+    |
+    <a href="https://www.cikm2024.org/" target="_blank">CIKM</a>
+    |
 <!-- Service Computing - B-->
     <a href="https://services.conferences.computer.org/2024/" target="_blank">ICWS</a>
     |
@@ -415,6 +420,9 @@
     <a href="https://conf.researchr.org/home/RE-2024" target="_blank">RE</a>
     |
     <a href="https://cyprusconferences.org/caise2024/" target="_blank">CAiSE</a>
+    |
+<!-- CV -->
+    <a href="http://2024.prcv.cn/" target="_blank">PRCV</a>
     |
 <!-- bigdata - C-->  
     <a href="https://bigdataieee.org/BigData2024/index.html" target="_blank">IEEE BigData</a>
@@ -442,7 +450,7 @@
     |
     <a href="https://conf.researchr.org/home/ease-2024" target="_blank">EASE</a>
     |
-    <a href="" target="_blank">Internetware</a>
+    <a href="https://conf.researchr.org/home/internetware-2024" target="_blank">Internetware</a>
     |
     <a href="" target="_blank">QRS</a>
     |     
@@ -481,17 +489,25 @@
     |
     <a href="" target="_blank">ChinaService</a>
     |
+    <a href="https://ccf.org.cn/ICSS2024" target="_blank">ICSS</a>
+    |
     <a href="" target="_blank">ChineseCSCW</a>
     |
     <a href="" target="_blank">AKBC</a>
     |
+    <a href="https://ickg.zhonghuapu.com/" target="_blank">ICKG</a>
+    | 
     <a href="" target="_blank">IJCKG</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/qq2Yj2SgCm1TSDTPw21ybA" target="_blank">今日最热AI论文Top5：AI智能体对齐、开放域问答系统、DebugBench、谈判游戏、联邦学习</a>
     | 
 <!-- geographic information --> 
     <a href="https://ccf.org.cn/13veXIf/brief_2040" target="_blank">第五届空间数据智能学术会议SpatialDI 2024</a>
     | 
     <br/>
     <a href="https://mp.weixin.qq.com/s/K-uLAs30FfeZthtDifZSHA" target="_blank">ICLR 2024论文审稿结果出炉！7000+高产论文创新纪录，扩散模型占比最高</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/17MdOkwEoMM20shsaq-5JA" target="_blank">快讯｜北邮GAMMA LAB的五篇工作被www 2024 接收</a>
     |
 
 <h4>2023</h4>
@@ -701,6 +717,7 @@
 <!-- biological information -->
     <a href="https://ccbr99.cn/" target="_blank">CCBR</a>
     |
+<!-- CV -->
     <a href="https://www.prcv2023.cn/2023prcv/" target="_blank">PRCV</a>
     |
     <a href="https://mobile.ccf.org.cn/web/html7/index.html?globalId=m1096157383488573440168138588584&type=1" target="_blank">CBC</a>
@@ -2603,10 +2620,134 @@ ChatGPT:
     | 
     <!-- 12.29 --> 
     <a href="https://mp.weixin.qq.com/s/0B3GEXmloEEZgi-0J0Lrvw" target="_blank">AAAI 2024：大模型如何掌握复杂工具？看孔子框架的教学之道</a>
-    | 
+    |
+    <!-- 12.30 --> 
+    <a href="https://mp.weixin.qq.com/s/kpb86Nap6sqct6HqrtJc0g" target="_blank">回顾2023，那些令 AI 圈大地震的瞬间！ </a>
+    |
+    <a href="https://mp.weixin.qq.com/s/V_PGoAWHV99tMMuX22hWcg" target="_blank">GPT-4V“大翻车”！把海豹识别成狗！分不清炸鸡和泰迪，葫芦娃也数不明白...</a>
+    |     
     <!-- 2024.01.02 --> 
     <a href="https://mp.weixin.qq.com/s/hxDIDdUH86ltZl_kVRscVg" target="_blank">肖仰华：走向千行百业的大模型</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/0sMKVOHYY__6HeaNEsSMMg" target="_blank">谷歌发布Prompt Expansion框架，让文生图更轻松！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/zsc9IDAd_qaNkFN4RKE9cw" target="_blank">这是GPT-4变笨的新解释</a>
+    |
+    <!-- 2024.01.04 --> 
+    <a href="https://mp.weixin.qq.com/s/8GZPnm8tq2Dqgvj1iAfNAw" target="_blank">吴恩达最新推出基于大模型的《AI高级检索》课程，限时免费白嫖！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/oRY6RmCLtsppi3m7aTW0Vw" target="_blank">GPU短缺、Agent兴起、虚假信息扩散，李飞飞&斯坦福HAI对24年的AI预测</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/BphxUTjC_Xne3ZMWBGFdIw" target="_blank">LeCun 自曝拒绝谷歌研究主管offer！只想专心做研究</a>
+    |
+    <!-- 2024.01.05 --> 
+    <a href="https://mp.weixin.qq.com/s/AV2hYEFolP679PnLmQ97kQ" target="_blank">斯坦福机器人炒虾爆火网络，谷歌DeepMind发布机器人最新进展，2024智能机器人元年到来？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/WE_rfYFhjr7h0DN7VPYGrw" target="_blank">OpenAI董事会正考虑新的董事会人选，奥特曼不在其中</a>
+    |
+    <!-- 2024.01.06 --> 
+    <a href="https://mp.weixin.qq.com/s/yZo-HcGuWFQE8B63hZkqVQ" target="_blank">专补大模型短板的RAG有哪些新进展？这篇综述讲明白了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/tVEEmySQCCve-9b43CI6Qw" target="_blank">斯坦福爆火机器人自爆失败内幕！炒虾做家务逗猫都是人类遥控的，AI厨师和女仆还很遥远</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/MK9i7L5zuY-sSa5GoRuAAg" target="_blank">新加坡国立大学发布图文预训练框架 CosMo，助力长文本理解</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/cAF1HQnvNBhKCof9nUrigQ" target="_blank">谷歌被爆正在开发高级版Bard，欲对标 ChatGPT Plus</a>
+    |     
+    <!-- 2024.01.07 --> 
+    <a href="https://mp.weixin.qq.com/s/4T5E4ekQirocILbfu6ICdA" target="_blank">对于领域任务:大语言模型、NLP建模、Agents适用场景探讨</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/BuVgkQLrei_ZR-yvetYb2g" target="_blank">微软最新研究成果：使用GPT-4合成数据来训练AI模型，实现SOTA！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/D-UgaETkZLaxNRNYebnzVQ" target="_blank">在版权付费方面，OpenAI 比人想象中的还要「小气」</a>
+    |    
+    <!-- 2024.01.08 --> 
+    <a href="https://mp.weixin.qq.com/s/MFuKKoqW3mEG4cTYBujXxQ" target="_blank">微软女高管被爆已正式加入OpenAI董事会</a>
+    |
+    <!-- 2024.01.09 --> 
+    <a href="https://mp.weixin.qq.com/s/yDgWYkSLwPqoH8IUl0sD_A" target="_blank">这个GPU云平台治好了我的算力焦虑！价格低不排队！羊毛薅不完</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/1nhrAsT8CqKX-nEsslNpQw" target="_blank">OpenAI大反击！称纽约时报涉嫌故意操纵，且数据是「合理使用」</a>
+    |
+    <!-- 2024.01.10 --> 
+    <a href="https://mp.weixin.qq.com/s/tJdhxHdxTPSi-7BC3zCcPA" target="_blank">今日最热门AI论文Top5：高效微调、图生3D、AI Agent、大模型ChatGPT、图学习</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/TGRlNBpPFMM2fvBxkNSEAQ" target="_blank">2024 CSRankings全球计算机科学排名发布！清华AI第一，哈工大NLP第一</a>
+    |
+    <!-- 2024.01.11 --> 
+    <a href="https://mp.weixin.qq.com/s/Q9AZHEX6GeloJbMr1-GUXw" target="_blank">重磅！OpenAI 官宣上线 GPT Store！超300万个 GPTs 大爆发</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/RTnI04tlevI-F0u9xZU1GQ" target="_blank">DeepSeek 发布全新开源大模型，数学推理能力超越 LLaMA-2</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/uTUuxFee7hAmxUmliKqWlQ" target="_blank">OpenAI总裁亲自证实！ChatGPT 将支持长期记忆和个性化学习功能</a>
     |   
+    <!-- 2024.01.12 --> 
+    <a href="https://mp.weixin.qq.com/s/BxrzlDqIuCbtuT7DPraoqQ" target="_blank">首席AI教育者Sebastian Raschka博士推荐的2023年最具影响力的 10 篇AI论文</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/rYEHxyaEvPOsy81K4O0ILg" target="_blank">Llama2-7B升级为Pro版本！腾讯提出「块扩展」训练法，效果全面提升</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/BHyX3HbeSIWrQkn4Av1jBA" target="_blank">Google开放域问答系统新突破！多粒度评估提升近20个点</a>
+    |
+    <!-- 2024.01.13 --> 
+    <a href="https://mp.weixin.qq.com/s/YmtXUB4HWpjM6qhKEtimbQ" target="_blank">今日最佳NLP论文推荐：颠覆性Prompt-tuning新法</a>
+    | 
+    <!-- 2024.01.16 --> 
+    <a href="https://mp.weixin.qq.com/s/nZu2303Yv7GBij5f2umtNA" target="_blank">练习时长两年半，马斯克的机器人连「自主叠衣服」都不会！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/vlMni-ZUhh7EJuiPxENQ0Q" target="_blank">OpenAI将推出新的AI工具，旨在防止美国大选期间虚假信息传播</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/cqSXN8ripGD8QDTWRcGMFg" target="_blank">今日Arxiv最热NLP大模型论文：清华大学让大语言模型自动并行自回归解码，速度提升高达4倍！</a>
+    |
+    <!-- 2024.01.17 --> 
+    <a href="https://mp.weixin.qq.com/s/ZXMagNOXfpobrnyCSvhS2g" target="_blank">大语言模型的32种消除幻觉的技术，你都了解吗？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/qv2bdD8y9R6UmO8ZnBZjgg" target="_blank">OpenAI组建「集体对齐」新团队，确保AI模型与人类价值观保持一致！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Uy0mlhTI_zBTZdKSqurtIA" target="_blank">今日Arxiv最热NLP大模型论文：AllenAI最新研究：让AI从简单学起，竟然能解决难题？</a>
+    |
+    <!-- 2024.01.18 --> 
+    <a href="https://mp.weixin.qq.com/s/ZXMagNOXfpobrnyCSvhS2g" target="_blank">Transformer竟是无限状态RNN？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ZXMagNOXfpobrnyCSvhS2g" target="_blank">今日Arxiv最热NLP大模型论文：MIT推出新方法，大幅提升LLMs的连贯性、准确性和可更新性！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/mniqTwgPKd34Kkv0DNiCQQ" target="_blank">Transformer竟是无限状态RNN？</a>
+    |    
+    <!-- 2024.01.19 --> 
+    <a href="https://mp.weixin.qq.com/s/bsm5nGAlniGIbQ3SHtxgRw" target="_blank">小扎宣布进军AGI！Meta正在训练Llama 3，目标是60万块H100！模型仍会开源</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/q9JO13LMupfOH6II-E6INQ" target="_blank">碾压华尔街，GPT-4 选股收益超 40%</a>
+    |
+    <!-- 2024.01.20 --> 
+    <a href="https://mp.weixin.qq.com/s/ReIyHTFB2gvulUfSgySJoA" target="_blank">谷歌DeepMind科学家「被爆将离职创业」！曾参与AlphaGo、Alphafold工作，首轮融资或超2亿美元</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Tge5OXJBwu3IPkaebmU-iQ" target="_blank">最高100亿美元！Sam Altman正筹集资金支撑「自造AI芯片」野心</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/TddkJJzbvlH9S_1RyG9EWQ" target="_blank">今日Arxiv最热NLP大模型论文：Meta自我奖励模型超越人类反馈限制，刷新AlpacaEval 2.0排行榜</a>
+    |
+    <!-- 2024.01.21 --> 
+    <a href="https://mp.weixin.qq.com/s/70mXmWRwarHVcCeaAIpJrw" target="_blank">碾压华尔街，GPT-4 选股收益超 40%</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/VugQGMG7evMBRlJOz1zVGw" target="_blank">Yann LeCun荣获全球AI大奖！Keras之父和Deepmind创始人也曾获奖</a>
+    |  
+    <!-- 2024.01.22 --> 
+    <a href="https://mp.weixin.qq.com/s/vLUJ28ocpXgqze8mVyF2mA" target="_blank">今日Arxiv最热NLP大模型论文：清华大学让大语言模型自动并行自回归解码，速度提升高达4倍！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/ACKSk20mDDA25UjENRCUoA" target="_blank">今日ArXiv最骚NLP论文：欺骗大模型却能大幅提升效果的骚操作</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/GQ6V2L1wfCz4p8VSF4CZqw" target="_blank">刚上线三天，GPT Store违反政策的“AI女友”就已泛滥！</a>
+    | 
+    <!-- 2024.01.23 --> 
+    <a href="https://mp.weixin.qq.com/s/B3_pD9iLLaKUNUQJ_Q_Gbg" target="_blank">当心！不要教大模型骗人，研究表明AI变坏后，很难被纠正原创 智商掉了一地</a>
+    | 
+    <!-- 2024.01.24 --> 
+    <a href="https://mp.weixin.qq.com/s/uQAubTdgaPmhbQbC6dhMUg" target="_blank">今日arXiv最热NLP大模型论文：北京大学警惕ChatGPT等大模型遏制人类的创新能力</a>
+    | 
+    <!-- 2024.01.25 --> 
+    <a href="https://mp.weixin.qq.com/s/zdr48aEHiMdKxxRdNKYrEw" target="_blank">Hinton、LeCun、Bengio、清华马维英等人当选2023 ACM Fellow！</a>
+    | 
+
+
+                  
 </br>
 </br>
 AI论文: 
