--- a/pages/activities.html
+++ b/pages/activities.html
@@ -131,7 +131,10 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
-    <li><strong>Invited Reviewer</strong>, The 33rd International Joint  Conference on Artificial Intelligence (<a href="https://ijcai24.org/"><strong><u><font color="#874e26">IJCAI 2024</font></u></strong></a>), Jeju Island, South Korea, August 3rd-9th, 2024</li>
+    <li><strong>Invited Reviewer</strong>, ACM Multimedia 2024 (<a href="https://2024.acmmm.org/"><strong><u><font color="#874e26">ACM MM 2024</font></u></strong></a>), Melbourne, Australia, August 3rd-9th, 2024</li>
+
+
+    <li><strong>Invited Reviewer</strong>, The 33rd International Joint  Conference on Artificial Intelligence (<a href="https://ijcai24.org/"><strong><u><font color="#874e26">IJCAI 2024</font></u></strong></a>), Jeju Island, South Korea, October 28- November 1, 2024</li>
 
     
     <li><strong>Invited Reviewer</strong>, 2024 SIAM International Conference on Data Mining (<a href="https://www.siam.org/conferences/cm/conference/sdm24"><strong><u><font color="#874e26">SDM 2024</font></u></strong></a>), Westin Houston, TX, U.S., April 18-20, 2024</li>
