--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -207,7 +207,7 @@
     <a href="" target="_blank">ACM Multimedia</a>
     |
 <!-- software engineering - A-->
-   <a href="" target="_blank">ICSE</a>
+   <a href="https://conf.researchr.org/home/icse-2025" target="_blank">ICSE</a>
     |
 <!-- visualization - A-->
     <a href="" target="_blank">CHI</a>
@@ -482,7 +482,7 @@
 <!-- Multimedia Learning -->
     <a href="https://2024.acmmm.org/" target="_blank">ACM Multimedia Asia</a>
     |
-    <a href="" target="_blank">ChinaMM</a>
+    <a href="https://chinamm.csig.org.cn/2024/index.html" target="_blank">ChinaMM</a>
     |
 <!-- software engineering - others -->
     <a href="" target="_blank">ChinaSoft</a>
@@ -509,7 +509,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/17MdOkwEoMM20shsaq-5JA" target="_blank">快讯｜北邮GAMMA LAB的五篇工作被www 2024 接收</a>
     |
-
+    <a href="https://mp.weixin.qq.com/s/bflrSPiv-aICpPXZhq0_PA" target="_blank">人大高瓴人工智能学院师生论文被国际学术会议WWW 2024录用</a>
+    |
 <h4>2023</h4>
 <!-- network - A -->
     <a href="https://infocom2023.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
@@ -2767,8 +2768,35 @@ ChatGPT:
     |  
     <a href="https://mp.weixin.qq.com/s/Z0D6YSqJ2geQnt_fGq_rbA" target="_blank">今日arXiv最热NLP大模型论文：伯克利&DeepMind联合研究，RaLMSpec让检索增强LLM速度提升2-7倍！</a>
     |  
-    
-                    
+    <!-- 2024.01.30 --> 
+    <a href="https://mp.weixin.qq.com/s/Uxssi3tnnDcszSkaTMVDRw" target="_blank">剑指百度！360上线「AI搜索」APP，是挑衅还是防御？</a>
+    |     
+    <a href="https://mp.weixin.qq.com/s/UF2V31yh9f0BH0XoA90SCw" target="_blank">全新开源AI代码工具诞生！超越谷歌DeepMind旗下AlphaCode</a>
+    |   
+    <a href="https://mp.weixin.qq.com/s/Z1EmfrXkVeaV6Lo98qQS-A" target="_blank">OpenAI：我愿花500万购买新闻文章版权，谷歌：我出10亿美金</a>
+    |   
+    <!-- 2024.01.31 --> 
+    <a href="https://mp.weixin.qq.com/s/bWo79FpAlw_EV089X298-A" target="_blank">浙大团队撰写75页科学语言大模型综述，全面梳理Sci-LLMs最新研究进展</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/E8DovtrmuDKdUyLsMfUw9A" target="_blank">这个「AI 写真」开源项目火了！ GitHub 一周暴涨四千星，Yann LeCun 亲自转发</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/iMZqWn65zXnet4ZkNLdpIQ" target="_blank">刚刚，ChatGPT再爆安全漏洞！大量私密对话被泄露</a>
+    |  
+    <!-- 2024.02.01 --> 
+    <a href="https://mp.weixin.qq.com/s/czFjt1vhPnQxZXtedAOwvw" target="_blank">智源成立5年，高层大变动！黄铁军不再担任院长，张宏江、唐杰、刘江均已离任</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/EYGzyAirP6FcD5BhWR2G_g" target="_blank">GPT-4级别模型惨遭泄露！引爆AI社区，“欧洲版OpenAI”下场认领</a>
+    |
+    <!-- 2024.02.02 --> 
+    <a href="https://mp.weixin.qq.com/s/kFJ2BUftNQAQpSlimUAu0g" target="_blank">今日arXiv最热NLP大模型论文：像人一样浏览网页执行任务，腾讯AI lab发布多模态端到端Agent</a>
+    | 
+    <!-- 2024.02.03 --> 
+    <a href="https://mp.weixin.qq.com/s/SZrIUS6t1D4DkIkqInadHA" target="_blank">北大发表 AI Alignment综述：确保AI与人类价值观一致的四个关键设计原则</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/orjh-tQ-8pfVZe7vIaj3Uw" target="_blank">用 ChatGPT与超过 5000 位女士约会，成功找到未婚妻！</a>
+    |          
+    <a href="https://mp.weixin.qq.com/s/Nz3TPc0UX-ZJX38eOkzN2A" target="_blank">今日arXiv最热NLP大模型论文：IBM研究院提出Genie方法，自动生成高质量数据集</a>
+    | 
 </br>
 </br>
 AI论文: 
