--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -480,7 +480,7 @@
     <a href="" target="_blank">ICWSM</a>
     |
 <!-- Multimedia Learning -->
-    <a href="https://2024.acmmm.org/" target="_blank">ACM Multimedia Asia</a>
+    <a href="https://mmasia2024.org/index.html" target="_blank">ACM Multimedia Asia</a>
     |
     <a href="https://chinamm.csig.org.cn/2024/index.html" target="_blank">ChinaMM</a>
     |
