--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -477,6 +477,8 @@
     |
     <a href="" target="_blank">CCIR</a>
     |
+    <a href="http://wasa-conference.org/WASA2024/index.html" target="_blank">WASA</a>
+    |
     <a href="" target="_blank">ICWSM</a>
     |
 <!-- Multimedia Learning -->
@@ -2796,7 +2798,18 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/orjh-tQ-8pfVZe7vIaj3Uw" target="_blank">用 ChatGPT与超过 5000 位女士约会，成功找到未婚妻！</a>
     |          
     <a href="https://mp.weixin.qq.com/s/Nz3TPc0UX-ZJX38eOkzN2A" target="_blank">今日arXiv最热NLP大模型论文：IBM研究院提出Genie方法，自动生成高质量数据集</a>
+    |
+    <!-- 2024.02.04 --> 
+    <a href="https://mp.weixin.qq.com/s/fqJeCBZNJacACvni-oIboA" target="_blank">Meta发布抽象链，大模型工具利用精度+6%，速度+40%！</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/Ukej2cdukBLMf6I3ay-nIw" target="_blank">今日arXiv最热NLP大模型论文：引入噪声，可提升RAG检索效果超30%？？</a>
+    | 
+
+    <!-- 2024.02.05 --> 
+    <a href="https://mp.weixin.qq.com/s/uYOKFn29F481w-ppAP34SQ" target="_blank">研究表明：论文被大V宣传后，引用次数暴涨2～3倍！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/7T-VHZi1LH8mbaigwmd_LQ" target="_blank">今日arXiv最热NLP大模型论文：微软提出SliceGPT，删除25%模型参数，性能几乎无损</a>
+    |      
 </br>
 </br>
 AI论文: 
