--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -421,6 +421,9 @@
     |
     <a href="https://cyprusconferences.org/caise2024/" target="_blank">CAiSE</a>
     |
+<!-- Bioinformatics and Biomedicine - B-->
+    <a href="https://ieeebibm.org/BIBM2024/" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
+    |
 <!-- CV -->
     <a href="http://2024.prcv.cn/" target="_blank">PRCV</a>
     |
@@ -2804,12 +2807,27 @@ ChatGPT:
     | 
     <a href="https://mp.weixin.qq.com/s/Ukej2cdukBLMf6I3ay-nIw" target="_blank">今日arXiv最热NLP大模型论文：引入噪声，可提升RAG检索效果超30%？？</a>
     | 
-
     <!-- 2024.02.05 --> 
     <a href="https://mp.weixin.qq.com/s/uYOKFn29F481w-ppAP34SQ" target="_blank">研究表明：论文被大V宣传后，引用次数暴涨2～3倍！</a>
     | 
     <a href="https://mp.weixin.qq.com/s/7T-VHZi1LH8mbaigwmd_LQ" target="_blank">今日arXiv最热NLP大模型论文：微软提出SliceGPT，删除25%模型参数，性能几乎无损</a>
-    |      
+    | 
+    <!-- 2024.02.06 --> 
+    <a href="https://mp.weixin.qq.com/s/DS-Splze3B-v5LwMXosUZQ" target="_blank">对AI原生应用做“逆向”后，我找到了大多数大模型厂商注定失败的原因</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/KZWL32l4EIEnn8Xq4NtEGg" target="_blank">今日arXiv最热NLP大模型论文：大语言模型为什么始终会产生幻觉</a>
+    |
+    <!-- 2024.02.07 --> 
+    <a href="https://mp.weixin.qq.com/s/C3DTRSmChiJ3EbxBN9XLaw" target="_blank">今日arXiv最热NLP大模型论文：无需数据集，大模型可通过强化学习与实体环境高效对齐 | ICLR2024</a>
+    |
+    <!-- 2024.02.08 --> 
+    <a href="https://mp.weixin.qq.com/s/BtcVlIlEaC9Spn2wrv8tpw" target="_blank">AllenAI 开源了关于大模型的所有细节！数据、代码、参数、训练过程，完全复现</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/A3kRF5qJ-6rCauyNsRfw2Q" target="_blank">ChatGPT 变懒最新解释！或和系统Prompt太长有关</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/PkL-aUy3HKSPaPczs83efw" target="_blank">今日arXiv最热NLP大模型论文：基于语言模型模拟的经济学研究</a>
+    | 
+
 </br>
 </br>
 AI论文: 
