--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -397,6 +397,8 @@
     |
     <a href="https://www.cikm2024.org/" target="_blank">CIKM</a>
     |
+    <a href="https://www.ecai2024.eu/" target="_blank">ECAI</a>
+    |
 <!-- Service Computing - B-->
     <a href="https://services.conferences.computer.org/2024/" target="_blank">ICWS</a>
     |
@@ -2827,6 +2829,27 @@ ChatGPT:
     | 
     <a href="https://mp.weixin.qq.com/s/PkL-aUy3HKSPaPczs83efw" target="_blank">今日arXiv最热NLP大模型论文：基于语言模型模拟的经济学研究</a>
     | 
+    <!-- 2024.02.12 --> 
+    <a href="https://mp.weixin.qq.com/s/ZQUBq_R32Rkw9lhqQC3u_w" target="_blank">大语言模型为什么始终会产生幻觉？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/3yX3i9qY5Rje0VVD7gAlAA?poc_token=HLXhymWjw2P8CrgI2poD7PGhp9puLf4vGlun3C1Y" target="_blank">复旦TravelPlanner让大语言模型挑战旅程规划</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/C9RjcRwHJ9gd9-XLKeK9rg" target="_blank">今日arXiv最热NLP大模型论文：智能谈判Agent综述，一文读懂谈判桌上的人工智能</a>
+    |
+    <!-- 2024.02.13 --> 
+    <a href="https://mp.weixin.qq.com/s/vtOs_u9OyUS5ynHvt8fKmQ" target="_blank">复旦大学最新研究：如何让大模型敢回答“我不知道”？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/RSMWQ0CeiiHMt_WQKcgLhw" target="_blank">我让ChatGPT帮我钓妹子，它一口气撩了5000人</a>
+    |
+    <!-- 2024.02.14 --> 
+    <a href="https://mp.weixin.qq.com/s/70P_RePOap9f9IRkit_Ntg" target="_blank">今日arXiv最热NLP大模型论文：清华提出LongAlign，打破长上下文对齐瓶颈，数据、训练策略、评估基准一网打尽</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/sqv8zQHClTAzu8J6yExI2g" target="_blank">ChatGPT重大升级：能自动记住用户的习惯和喜好，用户有权决定是否共享数据给OpenAI</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/M5UNnlYX4eiOe5B68__bbg" target="_blank">提速30倍，清华大学提出使用GPT-4督导评估教学质量</a>
+    |
+
+
 
 </br>
 </br>
