--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -238,6 +238,16 @@
     |
     <a href="" target="_blank">UIC</a>
     |
+<!-- data mining - B-->     
+    <a href="" target="_blank">ICDM</a>
+    |
+    <a href="" target="_blank">CIKM</a>
+    |
+    <a href="https://www.ecai2024.eu/" target="_blank">ECAI</a>
+    |
+<!-- social Computing - B-->
+    <a href="" target="_blank">ICWSM</a>
+    |
 <!-- Service Computing - B-->
     <a href="" target="_blank">ICWS</a>
     |
@@ -370,6 +380,8 @@
     <a href="https://icdcs2024.icdcs.org/" target="_blank">ICDCS</a>
     | 
 <!-- semantic web - B-->
+    <a href="https://kr.org/KR2024/" target="_blank">KR</a>
+    |       
     <a href="" target="_blank">EMNLP</a>
     |
     <a href="https://2024.naacl.org/" target="_blank">NAACL</a>
@@ -398,6 +410,9 @@
     <a href="https://www.cikm2024.org/" target="_blank">CIKM</a>
     |
     <a href="https://www.ecai2024.eu/" target="_blank">ECAI</a>
+    |
+<!-- social Computing - B-->
+    <a href="https://www.icwsm.org/2024/index.html/" target="_blank">ICWSM</a>
     |
 <!-- Service Computing - B-->
     <a href="https://services.conferences.computer.org/2024/" target="_blank">ICWS</a>
@@ -559,6 +574,9 @@
     <a href="http://www.cloud-conf.net/icdm2023/index.html" target="_blank">ICDM</a>
     |
     <a href="https://cikm2023.github.io/" target="_blank">CIKM</a>
+    |
+<!-- social Computing - B-->
+    <a href="https://www.icwsm.org/2023" target="_blank">ICWSM</a>
     |
 <!-- software engineering - B-->
     <a href="http://www.tjudb.cn/dasfaa2023/" target="_blank">DASFAA</a>
@@ -2848,6 +2866,11 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/M5UNnlYX4eiOe5B68__bbg" target="_blank">提速30倍，清华大学提出使用GPT-4督导评估教学质量</a>
     |
+    <!-- 2024.02.17 --> 
+    <a href="https://mp.weixin.qq.com/s/qhr6D7LZMVo36rO0qVrOng" target="_blank">OpenAI超级视频模型Sora技术报告解读，虚拟世界涌现了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/72bIuoVqafauVjiUOYZLxw" target="_blank">今日Arxiv最热大模型论文：大语言模型真的理解上下文了吗？新研究揭示惊人发现</a>
+    |
 
 
 
@@ -2932,6 +2955,9 @@ AI论文:
     <a href=" https://caise22.ugent.be/" target="_blank">CAiSE</a>
     |
     <a href="https://conf.researchr.org/track/models-2022/models-2022-technical-track" target="_blank">MoDELS</a>
+    |
+<!-- social Computing - B-->
+    <a href="https://www.icwsm.org/2022" target="_blank">ICWSM</a>
     |
 <!-- Service Computing -->
     <a href="https://conferences.computer.org/icws/2022/cfp/" target="_blank">ICWS</a>
