--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -386,7 +386,7 @@
     |
     <a href="https://2024.naacl.org/" target="_blank">NAACL</a>
     |   
-    <a href="" target="_blank">ISWC</a>
+    <a href="https://iswc2024.semanticweb.org/" target="_blank">ISWC</a>
     |
     <a href="https://lrec-coling-2024.lrec-conf.org/" target="_blank">LREC-COLING [<a href="https://mp.weixin.qq.com/s/G_h98_ncaZAVT5jl1dsLHw" target="_blank">LREC-COLING 2024 Announcement</a>]</a>
     |
