--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -533,6 +533,14 @@
     |
     <a href="https://mp.weixin.qq.com/s/bflrSPiv-aICpPXZhq0_PA" target="_blank">人大高瓴人工智能学院师生论文被国际学术会议WWW 2024录用</a>
     |
+    <a href="https://mp.weixin.qq.com/s/lPBaqBGBMhHZP-EjOirDHQ" target="_blank">天津大学自然语言处理实验室9篇论文被LREC-COLING 2024接受！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/nse919SC_SXGG8hexo_UEg" target="_blank">复旦大学数据智能与社会计算实验室五篇论文被WWW、AAAI和COLING录用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Xe7K6Fbx5e6e-focnuqbQA" target="_blank">哈工大SCIR 12篇长文被COLING 2024录用</a>
+    |
+  
+
 <h4>2023</h4>
 <!-- network - A -->
     <a href="https://infocom2023.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
@@ -680,6 +688,8 @@
     <a href="https://cyprusconferences.org/casa2023/" target="_blank">CASA</a>
     |
 <!-- others -->
+    <a href="http://ranlp.org/ranlp2023/index.php/proceedings/" target="_blank">RANLP</a>
+    |
 <!-- Computational Linguistics -->
     <a href="http://www.afnlp.org/conferences/ijcnlp2023/wp/" target="_blank">AACL</a>
     |
@@ -2871,9 +2881,32 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/72bIuoVqafauVjiUOYZLxw" target="_blank">今日Arxiv最热大模型论文：大语言模型真的理解上下文了吗？新研究揭示惊人发现</a>
     |
-
-
-
+    <!-- 2024.02.19 --> 
+    <a href="https://mp.weixin.qq.com/s/tDqUt9SPyvjhJWHek71ZKw" target="_blank">天才科学家谢赛宁紧急辟谣！和OpenAI的Sora模型无关</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/2kEA8dDiHe3kQR3K-AVyww?poc_token=HIFj1WWjGylhiM4gHCtEWsDGyRWt-OsmVgRu8-Fw" target="_blank">今日arXiv最热NLP大模型论文：上海AI Lab联合清华发布十项全能数学大模型InternLM-Math</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/GUtn7wJlbpS0gSOF7Opi4g" target="_blank">斯坦福大学分析3.2万篇大模型HuggingFace文档后指出：现状堪忧！</a>
+    |
+    <!-- 2024.02.20 --> 
+    <a href="https://mp.weixin.qq.com/s/9_GKQUIYujIj2xcJ45fM4g" target="_blank">中美两大AI巨头火了！一位是Sam Altman，一位是「李一舟」</a>
+    |
+    <!-- 2024.02.21 --> 
+    <a href="https://mp.weixin.qq.com/s/uz-KIfc1RYD9xDC5u4FWOg" target="_blank">2024「诺奖风向标」斯隆奖出炉：杨笛一、杜少雷、清华校友姜楠、北大校友金驰等入选</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/5Ui5sO5T5BGTE00z10OFog" target="_blank">大语言模型的深度裁剪法</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/YQAUw8UQwjh4Jc0WDU7ngg" target="_blank">今日arXiv最热NLP大模型论文：微软发布：大模型时代的可解释机器学习，现状与挑战</a>
+    |
+    <!-- 2024.02.22 --> 
+    <a href="突发！AI独角兽「竹间智能」被曝停工停产6个月！" target="_blank">突发！AI独角兽「竹间智能」被曝停工停产6个月！</a>
+    |
+    <!-- 2024.02.23 --> 
+    <a href="https://mp.weixin.qq.com/s/sTxoxhyG6mAm5fI8tKdMPw" target="_blank">符尧大佬一作发文，仅改训练数据，就让LLaMa-2上下文长度扩展20倍！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/E1D1_9AuJcFSeeaX3QeIAQ" target="_blank">今日arXiv最热NLP大模型论文：无需提示也能推理！Google DeepMind新研究揭示AI内在推理能力</a>
+    |
+    
 </br>
 </br>
 AI论文: 
