--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -189,6 +189,9 @@
 <!-- AI - A -->
     <a href="" target="_blank">IJCAI</a>
     |
+<!-- Hybrid - A -->
+    <a href="https://www2025.org/" target="_blank">The Web Conference</a>
+    |
 <!-- IR - A-->
     <a href="" target="_blank">SIGIR</a>
     |
@@ -2906,7 +2909,37 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/E1D1_9AuJcFSeeaX3QeIAQ" target="_blank">今日arXiv最热NLP大模型论文：无需提示也能推理！Google DeepMind新研究揭示AI内在推理能力</a>
     |
+    <!-- 2024.02.24 --> 
+    <a href="https://mp.weixin.qq.com/s/Mo7AFHPbFC2XXghQudtxDA" target="_blank">大离谱！AI写作竟让孔子遗体现身巴厘岛，看完笑不活了</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Ma5hc_aCgVD7TLdYsszqcw" target="_blank">Gemini被曝光歧视白人，Google再次被围攻，马斯克也加入了！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/znBwNCe0r_5sh2n1n3zxFA" target="_blank">外星文明会是朋友还是敌人？科学家用AI模拟揭示惊人答案！</a>
+    | 
+    <!-- 2024.02.25 --> 
+    <a href="https://mp.weixin.qq.com/s/Mo7AFHPbFC2XXghQudtxDA" target="_blank">大离谱！AI写作竟让孔子遗体现身巴厘岛，看完笑不活了</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/U6NOinUWGWqVqfBVPQ5Q2g" target="_blank">复旦发布多模态大模型AnyGPT，文图语乐样样行</a>
+    | 
+    <!-- 2024.02.26 --> 
+    <a href="https://mp.weixin.qq.com/s/kS410RJW4PYHqMcIELKaEw" target="_blank">Sora完整能力曝光！多模态视频理解或成为下次爆点</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/66QlKDyuGNCgzyQKO6zbDg" target="_blank">Deepmind最新研究：一个技巧，思维链不再需要提示词激发了！</a>
+    |     
+    <!-- 2024.02.27 --> 
+    <a href="https://mp.weixin.qq.com/s/ZkN-TsVlK2mVtjCRtEUdrA" target="_blank">复旦发布ToolSword框架，揭露大模型工具学习中的安全风险</a>
+    | 
+    <!-- 2024.02.28 --> 
+    <a href="https://mp.weixin.qq.com/s/Mo7AFHPbFC2XXghQudtxDA" target="_blank">突发！苹果放弃十年造车梦！转身押注AI，2000人团队解散或转岗、数十亿美元打水漂</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/g7zyD-Eewm-tmo7Bj-8w3w" target="_blank">突发！苹果放弃十年造车梦！转身押注AI，2000人团队解散或转岗、数十亿美元打水漂</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/g7zyD-Eewm-tmo7Bj-8w3w" target="_blank">突发！苹果放弃十年造车梦！转身押注AI，2000人团队解散或转岗、数十亿美元打水漂</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/XGK5jHKD-Iqk_6Z5KxDMoA" target="_blank">机器遗忘同等重要，AI如何忘记不良数据，保护用户隐私？</a>
+    |   
     
+
 </br>
 </br>
 AI论文: 
