--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -542,7 +542,8 @@
     | 
     <a href="https://mp.weixin.qq.com/s/Xe7K6Fbx5e6e-focnuqbQA" target="_blank">哈工大SCIR 12篇长文被COLING 2024录用</a>
     |
-  
+    <a href="https://mp.weixin.qq.com/s/ahaPeR4MEKpxcOjtzgKVtg" target="_blank">软件工程顶会——ICSE '24 论文清单、摘要</a>
+    |  
 
 <h4>2023</h4>
 <!-- network - A -->
@@ -2932,14 +2933,17 @@ ChatGPT:
     <!-- 2024.02.28 --> 
     <a href="https://mp.weixin.qq.com/s/Mo7AFHPbFC2XXghQudtxDA" target="_blank">突发！苹果放弃十年造车梦！转身押注AI，2000人团队解散或转岗、数十亿美元打水漂</a>
     |  
-    <a href="https://mp.weixin.qq.com/s/g7zyD-Eewm-tmo7Bj-8w3w" target="_blank">突发！苹果放弃十年造车梦！转身押注AI，2000人团队解散或转岗、数十亿美元打水漂</a>
-    |
-    <a href="https://mp.weixin.qq.com/s/g7zyD-Eewm-tmo7Bj-8w3w" target="_blank">突发！苹果放弃十年造车梦！转身押注AI，2000人团队解散或转岗、数十亿美元打水漂</a>
-    |
     <a href="https://mp.weixin.qq.com/s/XGK5jHKD-Iqk_6Z5KxDMoA" target="_blank">机器遗忘同等重要，AI如何忘记不良数据，保护用户隐私？</a>
-    |   
-    
-
+    |  
+    <a href="https://mp.weixin.qq.com/s/g7zyD-Eewm-tmo7Bj-8w3w" target="_blank">今日arXiv最热大模型论文：斯坦福大学分析3.2万篇大模型HuggingFace文档后指出：现状堪忧</a>
+    | 
+    <!-- 2024.02.29 --> 
+    <a href="https://mp.weixin.qq.com/s/66I6xDqav9tSa170jZpoiQ" target="_blank">字节被爆正在秘密研发「文生视频」等多款AI产品！</a>
+    |     
+    <a href="https://mp.weixin.qq.com/s/66I6xDqav9tSa170jZpoiQ" target="_blank">今日arXiv最热NLP大模型论文：中科院发布！针对初学者的大语言模型综述</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/NyWHPZ3jGvxBxE4wUIOVdQ" target="_blank">复旦发布！通过集成小推理引擎，赋能大模型逻辑推理能力</a>
+    |
 </br>
 </br>
 AI论文: 
