--- a/pages/activities.html
+++ b/pages/activities.html
@@ -228,8 +228,15 @@
 
     <li><strong>Invited Reviewer</strong>, CAAI Transactions on Intelligence Technology (<a href="https://ietresearch.onlinelibrary.wiley.com/journal/24682322"><strong><u><font color="#874e26">CAAI-TIT</font></u></strong></a>)</li>
 
+    
+    <li><strong>Invited Reviewer</strong>, Neurocomputing (<a href="https://www.sciencedirect.com/journal/neurocomputing"><strong><u><font color="#874e26">Neurocomputing</font></u></strong></a>)</li>
+
    
     <li><strong>Invited Reviewer</strong>, Knowledge-Based Systems (<a href="http://www.journals.elsevier.com/"><strong><u><font color="#874e26">KBS</font></u></strong></a>)</li>
+
+
+<!-- 2024.03.04 收到的审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Expert Systems With Applications (<a href="https://www.sciencedirect.com/journal/expert-systems-with-applications"><strong><u><font color="#874e26">ESWA</font></u></strong></a>)</li>
 
 
     <li><strong>Invited Reviewer</strong>, Information Processing and Management (<a href="https://www.sciencedirect.com/journal/information-processing-and-management"><strong><u><font color="#874e26">IPM</font></u></strong></a>)</li>
