--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -452,6 +452,9 @@
     |
     <a href="https://ieeebigdataservice.com/" target="_blank">IEEE BigDataService</a>
     |
+<!-- NLP - C-->    
+    <a href="http://tcci.ccf.org.cn/conference/2024/" target="_blank">NLPCC</a>
+    |
 <!-- data mining - C-->  
     <a href="https://adma2024.github.io/" target="_blank">ADMA</a>
     |
@@ -477,7 +480,7 @@
     |
     <a href="" target="_blank">QRS</a>
     |     
-    <a href="" target="_blank">APSEC</a>
+    <a href="https://conf.researchr.org/home/apsec-2024" target="_blank">APSEC</a>
     |
     <a href="" target="_blank">MSR</a>
     |
