--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2947,6 +2947,70 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/NyWHPZ3jGvxBxE4wUIOVdQ" target="_blank">复旦发布！通过集成小推理引擎，赋能大模型逻辑推理能力</a>
     |
+    <!-- 2024.03.01 --> 
+    <a href="https://mp.weixin.qq.com/s/V1nofWNn70shUb764dK1NA" target="_blank">今日arXiv最热大模型论文：点击即可播放！港中文发布大模型写歌神器！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/g0zxwyiBbKlofY0NQdaUvg" target="_blank">AI也来打掼蛋，难道人工智能也能当领导？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-FtWa6QLhACQXh5ONgYArQ" target="_blank">马斯克正式起诉OpenAI和奥特曼！</a>
+    |
+    <!-- 2024.03.02 --> 
+    <a href="https://mp.weixin.qq.com/s/tJIFb8k-gqiRDeEbN0ML5g" target="_blank">OpenAI回击马斯克的起诉：GPT-4不是AGI，所以没必要开源</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/0aDk8BQZPD8xGEJs4Gc7Sw" target="_blank">今日Arxiv最热NLP大模型论文：Llama-2上下文扩大48倍的方法来了，港大发布，无需训练</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/0aDk8BQZPD8xGEJs4Gc7Sw" target="_blank">香港大学发布思维扩散DoT，让思维在时间上扩散，提效保质！</a>
+    |
+    <!-- 2024.03.03 --> 
+    <a href="https://mp.weixin.qq.com/s/K-HvtY0Wi0m4QoKGQ3v3nA" target="_blank">逼迫大模型消除幻觉，就像杨永信电击治疗网瘾少年</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/H9pxrFnDiTir9_15GJTs5w" target="_blank">马斯克状告OpenAI的关键证据竟是微软的火花论文，可GPT-4到底是不是AGI呢？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Q2LDUc1nBa4Nvjbk-XPalw" target="_blank">今日arXiv最热大模型论文：谷歌最新研究，将LLM用于回归分析任务，显著超越传统模型</a>
+    |
+    <!-- 2024.03.04 --> 
+    <a href="https://mp.weixin.qq.com/s/dtsR5lkkELJlh0i4TzuX0Q" target="_blank">今日arXiv最热大模型论文：北京大学发布，将试错引入大模型代理学习！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/WIFTUHAp4PXX_wx0QMOsHw" target="_blank">大模型推荐落地啦！融合知识图谱，蚂蚁集团发布！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/45HTCN0ccaV42DOcHSLceQ" target="_blank">聊聊国内「类Sora模型」发展现状，和 Sora 的差距到底有多大？</a>
+    |
+    <!-- 2024.03.05 --> 
+    <a href="https://mp.weixin.qq.com/s/M_uHcJSM2k5UxTIqNMbQ5Q" target="_blank">Anthropic 发布 Claude 3 系列模型，世界最强模型易主！GPT-4被全面超越</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/guuJWxVO_vtpxI6kW0KBbQ" target="_blank">今日Arxiv最热NLP大模型论文：北京大学发布“讨论链”，利用LLM协作回答复杂问题</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/lKHRTXT_jbivSTNo8g8EXg" target="_blank">2张图2秒钟3D重建！这款AI工具火爆GitHub，网友：忘掉Sora</a>
+    |
+    <!-- 2024.03.06 --> 
+    <a href="https://mp.weixin.qq.com/s/K-HvtY0Wi0m4QoKGQ3v3nA" target="_blank">破除 OpenAI 的打压魔咒，Claude 3 一面被吹捧，一面被嘲笑</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/jPBKfhN68zX8uT__xFAaBA" target="_blank">今日arXiv最热NLP论文：Meta重磅，为训练数据打上烙印，以判断是否被大模型所用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/U2NTBQkfN0ge7U3xvU3G0A" target="_blank">当心智能体后门！人大、北大团队深入研究大模型智能体后门鲁棒性，揭示严重安全风险</a>
+    |
+    <!-- 2024.03.07 --> 
+    <a href="https://mp.weixin.qq.com/s/D2dOtdy6gEyZJQU3BR8aDg" target="_blank">今日arXiv最热大模型论文：哈工深新研究发现！无需额外资源，SelectIT方法助力大语言模型精准调优</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/vNMN4uxQQp2tgSB_ySUdwg" target="_blank">Claude 3 相比 GPT-4 到底强在哪？我整理了一份总结</a>
+    |
+    <!-- 2024.03.08 --> 
+    <a href="https://mp.weixin.qq.com/s/cqZI_nvbJv4vyw6_QCWj7A" target="_blank">Sora 作者被曝读博期间仅发表两篇论文，我们是否需要重塑科研价值观?</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/EBxZRy3DjP0PqHw6Cj6MNA" target="_blank">今日arXiv最热大模型论文：北大发布,通过上下文提示，让大模型学习一门新的语言</a>
+    |
+    <!-- 2024.03.09 --> 
+    <a href="https://mp.weixin.qq.com/s/dvbvO4pPONIrq-XWSxrR8A" target="_blank">“下个月AI觉醒，杀死奥特曼...”好莱坞上线首部AI制作的电影，长达90分钟，取材终结者2</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/kKsNi6SGqFn57OmrMut68w" target="_blank">今日arXiv最热NLP大模型论文：一文读懂多模态大模型的进化之路</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/L7Xe0D3QqD-TCSAO1fa9Ag" target="_blank">北京智源表示大模型推断少用几层也可以，节省15%算力资源</a>
+    |
+    <!-- 2024.03.10 --> 
+    <a href="https://mp.weixin.qq.com/s/Uy_I1z6KUmi4VoF2vWoG8w" target="_blank">今日Arxiv最热NLP大模型论文：美团发布VisionLLaMA，为视觉生成和理解提供新基线</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/u2HVQVjAQiPO6enji_hlcQ" target="_blank">康奈尔开源近10万份审稿意见，未来论文发表或将由AI定夺</a>
+    |
 </br>
 </br>
 AI论文: 
