--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -165,6 +165,9 @@
     <li><strong><font color="#874e26"><a href="http://product.dangdang.com/29289680.html">《神经网络与深度学习》 (Charu C. Aggarwal博士 著)  [<a href="https://mp.weixin.qq.com/s/ZYubz3-N24dDSCNV3Nkhgg" target="_blank">Report</a>]</a></a></font></strong></li>
 
 
+    <li><strong><font color="#874e26"><a href="https://arxiv.org/pdf/2403.00795.pdf">Executing Natural Language-Described Algorithms with Large Language Models: An Investigation</a></font></strong></li>
+
+
     <li><strong><font color="#874e26"><a href="https://github.com/shengyp/book_recommender">Book Recommendation</a></font></strong></li>
 </ul>
 
@@ -3011,6 +3014,43 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/u2HVQVjAQiPO6enji_hlcQ" target="_blank">康奈尔开源近10万份审稿意见，未来论文发表或将由AI定夺</a>
     |
+    <!-- 2024.03.11 --> 
+    <a href="https://mp.weixin.qq.com/s/QBORpQmZrumppLl81aWAxA" target="_blank">南洋理工发布多模态金融交易Agent，平均利润提高36%！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/QBORpQmZrumppLl81aWAxA" target="_blank">LeCun最新专访：为什么物理世界终将成为LLM的「死穴」？</a>
+    |
+    <!-- 2024.03.12 --> 
+    <a href="https://mp.weixin.qq.com/s/qz2cohrNNR4mLKct5whidw" target="_blank">复旦发布MovieLLM，让大模型看懂电影</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Wkv7sGY4NmjsOkN-cg0diQ" target="_blank">收益率16.6%！超越ChatGPT的股票预测模型来了，还能给出合理解释</a>
+    |
+    <!-- 2024.03.13 --> 
+    <a href="https://mp.weixin.qq.com/s/yLaGgfhIo23UmLYy4HuVyw" target="_blank">GPT-4.5 疑似面世，OpenAI 官网网页被索引，最快明天发布？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Jvb_UiYAtRm7LFkR51z37A" target="_blank">今日arXiv最热大模型论文：清华把大模型用于城市规划，回龙观和大红门地区成研究对象</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-YG2TLJMhC6tSXV-iEBtBw" target="_blank">数学问题难解？新研究提出MathScale方法，让AI更懂数学推理</a>
+    |
+    <!-- 2024.03.14 --> 
+    <a href="https://mp.weixin.qq.com/s/G9o81CYe77bdUCpH1yCsdA" target="_blank">Open AI 八年前的设想被谷歌突破啦！DeepMind官宣SIMA，动动嘴就能完成复杂游戏任务</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ZiIZEqoxSgbZpQ1oXGjwhg" target="_blank">今日arXiv最热NLP大模型论文：大模型把《算法导论》学明白了！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/TAGWaQqBN0nLBN4Q1sts0Q" target="_blank">UC伯克利：用大模型预测未来，准确率超越人类！</a>
+    |
+    <!-- 2024.03.15 --> 
+    <a href="https://mp.weixin.qq.com/s/EXoeLkI-AAYPDo8ZG1_7gg" target="_blank">谷歌Gemini：不建议未成年人接触 C++，太危险！Yann LeCun 和马斯克看到都笑了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/uVxl_QKDZe89ekMmSDMH_g" target="_blank">今日arXiv最热大模型论文：超越LoRA，北京大学提出预训练模型非梯度优化法</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/si9Q9xqFUy4lcNm_MMXeBg" target="_blank">马斯克 SpaceX 星舰第三次发射，好消息：没炸，顺利进入太空，坏消息：失联了</a>
+    |  
+    <!-- 2024.03.16 --> 
+    <a href="https://mp.weixin.qq.com/s/gcI5DBH2U1jE4PgA6hIFJg" target="_blank">‘抖音革命’背后的故事: TikTok法案风波可能影响其他应用！</a>
+    |    
+    <a href="https://mp.weixin.qq.com/s/e7FU1t1ax6f7SiEVuRMGQg" target="_blank">今日arXiv最热NLP大模型论文：逆向解析Sora背后的秘密，谈AI视频的机遇与挑战</a>
+    | 
+
 </br>
 </br>
 AI论文: 
@@ -4752,6 +4792,13 @@ GNN Field：
 <br />
 <!-- The Hong Kong Polytechnic University -->
     <a href="https://wanyu-lin.github.io/" target="_blank">Wanyu Lin</a>
+    |    
+  <br />
+  <br />
+Documentation-Driven Intelligence:
+<br />
+<!-- The University of Hong Kong  -->
+    <a href="https://sites.google.com/view/chenyi1/home" target="_blank">Yi Chen</a>
     |    
   <br />
   <br />
