--- a/pages/activities.html
+++ b/pages/activities.html
@@ -66,8 +66,10 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
-
     <li><strong>Local chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="#"><strong><u><font color="#874e26">CCKS 2024</font></u></strong></a>), Chongqing, China, xx xx-xx, 2024</li>
+
+    
+    <li><strong>Invited Reviewer</strong>, The 8th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="https://apweb2024.zjnu.edu.cn/"><strong><u><font color="#874e26">APWeb-WAIM 2024</font></u></strong></a>), Jinhua, China, August 30-Septemper 1, 2024</li>
 
     <li><strong>PC member</strong>, The 33rd International Joint  Conference on Artificial Intelligence (<a href="https://ijcai24.org/"><strong><u><font color="#874e26">IJCAI 2024</font></u></strong></a>), Jeju Island, South Korea, August 3rd-9th, 2024</li>
 
@@ -131,7 +133,10 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
-    <li><strong>Invited Reviewer</strong>, ACM Multimedia 2024 (<a href="https://2024.acmmm.org/"><strong><u><font color="#874e26">ACM MM 2024</font></u></strong></a>), Melbourne, Australia, October 28- November 1, 2024</li>
+    <li><strong>Invited Reviewer</strong>, The 8th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="https://apweb2024.zjnu.edu.cn/"><strong><u><font color="#874e26">APWeb-WAIM 2024</font></u></strong></a>), Jinhua, China, August 30-Septemper 1, 2024</li>
+
+
+    <li><strong>Invited Reviewer</strong>, ACM Multimedia 2024 (<a href="https://2024.acmmm.org/"><strong><u><font color="#874e26">ACM MM 2024</font></u></strong></a>), Melbourne, Australia, October 28-November 1, 2024</li>
 
 
     <li><strong>Invited Reviewer</strong>, The 33rd International Joint  Conference on Artificial Intelligence (<a href="https://ijcai24.org/"><strong><u><font color="#874e26">IJCAI 2024</font></u></strong></a>), Jeju Island, South Korea, August 3rd-9th, 2024</li>
@@ -232,7 +237,8 @@
     <li><strong>Invited Reviewer</strong>, Neurocomputing (<a href="https://www.sciencedirect.com/journal/neurocomputing"><strong><u><font color="#874e26">Neurocomputing</font></u></strong></a>)</li>
 
    
-    <li><strong>Invited Reviewer</strong>, Knowledge-Based Systems (<a href="http://www.journals.elsevier.com/"><strong><u><font color="#874e26">KBS</font></u></strong></a>)</li>
+    <li><strong>Invited Reviewer</strong>, Knowledge-Based Systems (<a href="http://www.jou
+        rnals.elsevier.com/"><strong><u><font color="#874e26">KBS</font></u></strong></a>)</li>
 
 
 <!-- 2024.03.04 收到的审稿邀请 -->
