--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -447,6 +447,9 @@
 <!-- Bioinformatics and Biomedicine - B-->
     <a href="https://ieeebibm.org/BIBM2024/" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
     |
+<!-- Robotics - B-->
+    <a href="https://2024.ieee-icra.org/" target="_blank">ICRA</a>
+    |
 <!-- CV -->
     <a href="http://2024.prcv.cn/" target="_blank">PRCV</a>
     |
@@ -3049,8 +3052,45 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/gcI5DBH2U1jE4PgA6hIFJg" target="_blank">‘抖音革命’背后的故事: TikTok法案风波可能影响其他应用！</a>
     |    
     <a href="https://mp.weixin.qq.com/s/e7FU1t1ax6f7SiEVuRMGQg" target="_blank">今日arXiv最热NLP大模型论文：逆向解析Sora背后的秘密，谈AI视频的机遇与挑战</a>
+    |
+    <!-- 2024.03.18 --> 
+    <a href="https://mp.weixin.qq.com/s/ddx7DdMD0BNxR91sB-lMBQ" target="_blank">GPT-4级模型Grok开源可商用！卷底层大模型的公司危了</a>
     | 
-
+    <a href="https://mp.weixin.qq.com/s/4JC57Ddvp25NZ-x-6h4Flg" target="_blank">今日arXiv最热大模型论文：何恺明重提十年之争——模型表现好是源于能力提升还是捕获数据集偏见</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/TwwBpHXOrmv0W3hK2eUJgg" target="_blank">大模型提示学习样本量有玄机，自适应调节方法好</a>
+    |    
+    <!-- 2024.03.19 --> 
+    <a href="https://mp.weixin.qq.com/s/Ys4KmO7S3yNzXb5mGZ1qww" target="_blank">刚刚！奥特曼放出来了GPT-5的内容：能力提升幅度超乎想象</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/yys4gjP3SyK4sZSkZMuA8A" target="_blank">老黄炸场！深夜发布全球最强芯片B200！推理速度提升30倍</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/yys4gjP3SyK4sZSkZMuA8A" target="_blank">复旦发布层次性奖励学习框架，增强大模型人类偏好对齐</a>
+    | 
+    <!-- 2024.03.20 --> 
+    <a href="https://mp.weixin.qq.com/s/ZNQg-HgYrcOkCNWrp7QmSg" target="_blank">无人驾驶飞机上架淘宝！？亿航智能首款国产「空中的士」网上开售，股价一度飞升 30%</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/I59sXKzFWBh-8O8P_OMwsw" target="_blank">今日arXiv最热NLP大模型论文：大模型RAG新宠！浙江大学发布自反馈检索增强方法</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/riq8xlZNNt0m-vZtRMpeAw" target="_blank">一次性支持 200 万字无损上下文！Kimi智能助手玩了个大的——月之暗面「登月」最新进展!</a>
+    |
+    <!-- 2024.03.21 --> 
+    <a href="https://mp.weixin.qq.com/s/-7Tz3g7cOV05rOyfA6XsvA" target="_blank">超越 GPT-4V 和 Gemini Pro！HyperGAI 发布最新多模态大模型 HPT，已开源</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-kfH54gnCUzoY0tLHQ9-sg" target="_blank">今日arXiv最热NLP大模型论文：华东师大发布对话级大模型幻觉评价基准DiaHalu</a>
+    | 
+    <a href="https://mp.weixxx" target="_blank">无人驾驶飞机xxx</a>
+    |
+    <!-- 2024.03.22 --> 
+    <a href="https://mp.weixin.qq.com/s/Jyad3yL-KXjn-O2N4t9m7g" target="_blank">浅聊一下最接近英伟达B200的AI芯片</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/G08_a5gkzjTIAt8MoprmMA" target="_blank">微软新作「Mora」，复原了Sora</a>
+    |
+    <!-- 2024.03.23 --> 
+    <a href="https://mp.weixin.qq.com/s/7j8R5H7d2P077ZrZTBYaMg" target="_blank">升级！Sora漫步街头的女人可以跳舞啦！科目三蹦迪多种舞姿停不下来，可精准控制动作</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/PnTsZKjVrAZaIwRpsp4QjQ" target="_blank">今日arXiv最热NLP大模型论文：COLING2024发布数据集揭示从莎士比亚时期开始的性别偏见</a>
+    |
 </br>
 </br>
 AI论文: 
