--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -3091,6 +3091,51 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/PnTsZKjVrAZaIwRpsp4QjQ" target="_blank">今日arXiv最热NLP大模型论文：COLING2024发布数据集揭示从莎士比亚时期开始的性别偏见</a>
     |
+    <!-- 2024.03.24 --> 
+    <a href="https://mp.weixin.qq.com/s/IBrK53WeOCcw5LQJQ5M5rA" target="_blank">今日arXiv最热NLP大模型论文：微软重磅：AgentAI，下一代人工智能的关键</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/hRi8aJHYf34ymilFTNTB0w" target="_blank">哈工深提出基于联邦学习的大模型指令微调</a>
+    |
+    <!-- 2024.03.25 --> 
+    <a href="https://mp.weixin.qq.com/s/fMV3z77uYiSgpSUYbycM9g" target="_blank">AGI争论燃爆！奥特曼、马斯克、杨立坤、Hinton一众大佬关于“AGI何时降临？”的讨论</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/zz_s0uhwS6tfni7K7_WERQ" target="_blank">何恺明重提十年之争——模型表现好是源于能力提升还是捕获数据集偏置？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/3W3zP31msluLQElrrUFdZA" target="_blank">今日arXiv最热NLP大模型论文：天津大学发布大模型数学能力细粒度评价基准FineMath</a>
+    |
+    <!-- 2024.03.26 --> 
+    <a href="https://mp.weixin.qq.com/s/ik4AXccca4Xhe-Ef4rQxPQ" target="_blank">业界首次！搭载英伟达GPU，50倍性能提升！Zilliz发布Milvus 2.4向量数据库</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/WIilIkg6GbSIqHtovLWMwg" target="_blank">今日arXiv最热NLP大模型论文：微软：用大模型分析用户满意度，让智能系统更善解人意</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/obxJxZvIra1aiOSy3RkYzA" target="_blank">Sora 究竟有多烧钱？Sora的推理与训练的计算成本被扒出来了</a>
+    |
+    <!-- 2024.03.27 --> 
+    <a href="https://mp.weixin.qq.com/s/ik4AXccca4Xhe-Ef4rQxPQ" target="_blank">业界首次！搭载英伟达GPU，50倍性能提升！Zilliz发布Milvus 2.4向量数据库</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/obxJxZvIra1aiOSy3RkYzA" target="_blank">Sora 究竟有多烧钱？Sora的推理与训练的计算成本被扒出来了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/WIilIkg6GbSIqHtovLWMwg" target="_blank">今日arXiv最热NLP大模型论文：微软：用大模型分析用户满意度，让智能系统更善解人意</a>
+    |
+    <!-- 2024.03.28 --> 
+    <a href="https://mp.weixin.qq.com/s/1qvWjAREFGNISGTmR87YbA" target="_blank">比阿里EMO抢先开源！蔡徐坤“复出”唱RAP，腾讯AniPortrait让照片变视频，鬼畜区UP狂喜！看看哪家效果好</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/BN6MsuOmKWc-HLQhigfkQg" target="_blank">集体出走的Stability AI 发布全新代码大模型，3B以下性能最优，超越Code Llama和DeepSeek-Coder</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/f4ptXPMEBdmvjQKiYyWF8Q" target="_blank">今日arXiv最热NLP大模型论文：天津大学发布大模型数学能力细粒度评价基准FineMath</a>
+    |
+    <!-- 2024.03.29 --> 
+    <a href="https://mp.weixin.qq.com/s/QwM1uk61o1DMpe5EPq9giQ" target="_blank">马斯克发布Grok 1.5！ 编码和数学能力大幅提升</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/XIySSX57d4FGlwVNiow5LQ" target="_blank">震惊！AI生成真人视频毫无瑕疵，台词随意变！HeyGen硬核升级数字人</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/f-uKaXEqHnkKEl87LFPXew" target="_blank">ICLR2024：南洋理工发布!改几个参数就为大模型注入后门</a>
+    |
+    <!-- 2024.03.30 --> 
+    <a href="https://mp.weixin.qq.com/s/sL2rAlaLjCrBOfBK2VbzxA" target="_blank">OpenAI 推出语音引擎，只需15秒样本，即能重建任何人的声音</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/AY80RJmVFyFee0FFA5U7Yg" target="_blank">性能强，成本低，运行快！最强开源大模型出现，超越ChatGPT和Llama！</a>
+    |
 </br>
 </br>
 AI论文: 
