--- a/pages/activities.html
+++ b/pages/activities.html
@@ -245,6 +245,10 @@
     <li><strong>Invited Reviewer</strong>, Expert Systems With Applications (<a href="https://www.sciencedirect.com/journal/expert-systems-with-applications"><strong><u><font color="#874e26">ESWA</font></u></strong></a>)</li>
 
 
+<!-- 2024.04 收到的审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Engineering Applications of Artificial Intelligence (<a href="https://www.sciencedirect.com/journal/engineering-applications-of-artificial-intelligence"><strong><u><font color="#874e26">EAAI</font></u></strong></a>)</li>
+
+
     <li><strong>Invited Reviewer</strong>, Information Processing and Management (<a href="https://www.sciencedirect.com/journal/information-processing-and-management"><strong><u><font color="#874e26">IPM</font></u></strong></a>)</li>
 
 
